# ether

./: .claudeignore  .gitignore  BACKLOG.md  CLAUDE.md  ROADMAP.md
.claude/: settings.json
backlog/: T1-world-entity.md  T10-forge-validate.md  T11-install-hooks-ci.md  T11-install-hooks.md  T12-forge-groom.md  T13-skill-thinning.md  T14-backlog-status-script.md  T15-claude-hooks-fmt-guard.md  T16-claude-hooks-session.md  T17-forge-check-lean.md  T18-forge-ast-grep.md  T19-review-agent-pass-a.md  T2-component-storage.md  T20-forge-diff.md  T21-forge-task-context.md  T22-forge-grep-recipes.md  T23-forge-helpers-registry.md  T24-groom-enter-worktree.md  T25-dev-enter-worktree.md  T26-roadmap-enter-worktree.md  T27-forge-repo-root.md  T28-reviewer-json-output.md  T29-forge-commit-gate.md  T3-derive-component.md  T30-close-backlog-status.md  T31-roadmap-grounding.md  T32-brainstorm-search-deps.md  T33-backlog-skill-verbs.md  T34-worktree-doc-preference.md  T35-forge-preflight.md  (+18 more)
crates/ether-forge/: Cargo.toml  README.md
crates/ether-forge/src/: frontmatter.rs  main.rs  repo.rs  roadmap.rs  task.rs
crates/ether-forge/src/cmd/: check.rs  commit.rs  deps.rs  diff.rs  diff_scan.rs  done.rs  find.rs  get.rs  grep.rs  groom.rs  helpers.rs  install_hooks.rs  list.rs  merge.rs  mod.rs  next.rs  preflight.rs  review_artifact.rs  rewrite.rs  rules.rs  rules_scan.rs  search.rs  start.rs  status.rs  task.rs  validate.rs  worktree.rs
crates/ether-forge/tests/: diff.rs  done_cascade.rs  find.rs  grep.rs  groom.rs  install_hooks.rs  merge.rs  repo_root.rs  start.rs
(+66 files in other folders)
