[package]
name = "ether-forge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ether-forge"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
